[metadata]
name = hasse-diagram
version = 1.1
author = Filip Marciniak
author_email = filip.marciniak15@gmail.com
description = Plot Hasse Diagram in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anras5/hasse-diagram
project_urls =
    Bug Tracker = https://github.com/anras5/hasse-diagram/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    numpy >= 2.0.0
    matplotlib >= 3.9.0
    networkx >= 3.3
    graphviz >= 0.20.3


[options.packages.find]
where = src